--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cloudinary": "^2.7.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "nodemailer": "^7.0.4",
