--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
-  "scripts": {
-    "build": "nest build && npm run",
-    "copy:templates": "cpx \"src/mail/templates/*/\" dist/src/mail/templates",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
-  },
+"scripts": {
+  "build": "nest build && npm run copy:templates",
+  "copy:templates": "cpx \"src/mail/templates/*/\" dist/src/mail/templates",
+  "start": "if [ \"$NODE_ENV\" = \"production\" ]; then npm run start:prod; else nest start; fi",
+  "start:dev": "nest start --watch",
+  "start:debug": "nest start --debug --watch",
+  "start:prod": "node --max-old-space-size=1024 dist/main",
+  "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+  "test": "jest",
+  "test:watch": "jest --watch",
+  "test:cov": "jest --coverage",
+  "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+  "test:e2e": "jest --config ./test/jest-e2e.json"
+},
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/common": "^11.0.1",
@@ -37,6 +37,7 @@
     "cloudinary": "^2.7.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
