--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-validator": "^0.14.2",
     "cloudinary": "^2.7.0",
     "cpx": "^1.5.0",
+    "express": "^5.1.0",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
